Fix users list
