# backend/src/api-v1/achievements/achievements.controller.ts
@@ -7,7 +7,7 @@ import { AchievementsService } from "./achievements.service";
 
 @Tags("Achievement")
 @Security("jwt")
-@Route("api/achievements")
+@Route("achievements")
 export default class AchievementController extends Controller {
   @Get("/")
   public async getAllAchievements(
